# murmuria

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  docker-compose-portainer.yml  docker-compose.yml  justfile  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  docker-publish.yml  release-please.yml
docker/: .dockerignore  Dockerfile
scripts/: run-server.sh
src/: audio.rs  discovery.rs  inference_request.rs  main.rs  server.rs  transcribe.rs
