[package]
name = "murmuria"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Self-hosted speech-to-text server (Whisper via whisper.cpp + Vulkan)."

[dependencies]
axum = { version = "0.7", features = ["ws", "multipart"] }
hound = "3.5.1"
mdns-sd = "0.20.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync"] }
whisper-rs = "0.16.0"

[features]
# GPU backends for whisper.cpp. Both off by default so a plain `cargo build`
# works CPU-only (CI); `just run` enables the right one automatically.
# Vulkan covers AMD/Intel/NVIDIA; CUDA is NVIDIA-only but faster there.
vulkan = ["whisper-rs/vulkan"]
cuda = ["whisper-rs/cuda"]
